--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1><a class="titulo-link" href="">Quiu Biu</a></h1>
+        <h1>Quiu Biu</h1>
         <img class="meg" src="meg.jpg" alt="">
     </header>
     <main>
