--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Quiu Biu</h1>
-        <img class="meg" src="meg.jpg" alt="">
+        <img class="meg" src="meg.jpg" alt="meg">
     </header>
     <main>
         <section id="declaração">
