--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Quiu Biu</h1>
+        <h1>QUIU BIU</h1>
         <img class="meg" src="meg.jpg" alt="meg">
     </header>
     <main>
