--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
             <p>Texto 2</p>
             <div class="imagem"><img src="foto2.jpg" alt="namorado"></div>
         </section>
+        <section id="declaração">
+            <h2>OUTRO</h2>
+            <p>Texto 1</p>
+            <div class="imagem"><img src="meg.jpg" alt=""></div>
+            <p>Texto 2</p>
+            <div class="imagem"><img src="meg.jpg" alt=""></div>
+        </section>
     </main>
 </body>
 </html>
