--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
     <header>
         <h1>QUIU BIU</h1>
-        <img class="meg" src="meg.jpg" alt="meg">
+        <img class="meg" src="imagens/meg.jpg" alt="meg">
     </header>
     <main>
         <section id="declaração">
             <h2>JOÃO PADRÃO</h2>
             <p>Texto 1</p>
-            <div class="imagem"><img src="foto1.jpg" alt="lindo"></div>
+            <div class="imagem"><img src="imagens/foto1.jpg" alt="lindo"></div>
             <p>Texto 2</p>
-            <div class="imagem"><img src="foto2.jpg" alt="namorado"></div>
+            <div class="imagem"><img src="imagens/foto2.jpg" alt="namorado"></div>
         </section>
         <section id="declaração">
             <h2>OUTRO</h2>
             <p>Texto 1</p>
-            <div class="imagem"><img src="meg.jpg" alt=""></div>
+            <div class="imagem"><img src="imagens/meg.jpg" alt=""></div>
             <p>Texto 2</p>
-            <div class="imagem"><img src="meg.jpg" alt=""></div>
+            <div class="imagem"><img src="imagens/meg.jpg" alt=""></div>
         </section>
     </main>
 </body>
