--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Quiu Biu</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 <body>
     <header>
         <h1>QUIU BIU</h1>
