--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
     </header>
     <main>
         <section id="declaração">
-            <h2>JOÃO PADRÃO</h2>
-            <p>Texto 1</p>
+            <h2>TÍTULO</h2>
+            <p>Parágrafo</p>
             <div class="imagem"><img src="imagens/foto1.jpg" alt="lindo"></div>
-            <p>Texto 2</p>
-            <div class="imagem"><img src="imagens/foto2.jpg" alt="namorado"></div>
+            <p>Parágrafo</p>
+            <div class="imagem"><img src="imagens/retro1.jpg" alt="namorado"></div>
         </section>
         <section id="declaração">
-            <h2>OUTRO</h2>
-            <p>Texto 1</p>
-            <div class="imagem"><img src="imagens/meg.jpg" alt=""></div>
-            <p>Texto 2</p>
-            <div class="imagem"><img src="imagens/meg.jpg" alt=""></div>
+            <h2>TÍTULO</h2>
+            <p>Parágrafo</p>
+            <div class="imagem"><img src="imagens/foto2.jpg" alt=""></div>
+            <p>Parágrafo</p>
+            <div class="imagem"><img src="imagens/retro2.jpg" alt=""></div>
         </section>
     </main>
 </body>
