--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <main>
         <section id="declaração">
             <h2>TÍTULO</h2>
-            <p>Parágrafo</p>
+            <p>Nos primeiros dias em que estive na faculdade, reparei em uma pessoa com um estilo muito bonito. Seu nome era João Padrão. Eu bati o olho nessa pessoa e pensei: “Nossa, quero muito fazer amizade com ele”. Queria muito conversar com essa pessoa, mas sempre tive muita dificuldade em fazer amizades novas. Perdido e sem saber o que fazer, já tinha aceitado o fato de que eu não conseguiria criar um vínculo com o João Padrão, que já tinha feito amizade com o Matheus Hétero.</p>
             <div class="imagem"><img src="imagens/foto1.jpg" alt="lindo"></div>
-            <p>Parágrafo</p>
+            <p>Até que, em uma atividade do CAGEO, o João Padrão puxou assunto comigo. Em tão pouco tempo, o João Padrão acabou se tornando uma pessoa excepcional para mim. Ele é muito legal e me entende. Me sinto muito confortável falando com ele e ele é recíproco. Espero que ele não me abandone, pois é uma pessoa que eu gosto muito de ter por perto, me sinto seguro e acolhido quando estou com ele e parece que ele realmente faz questão da minha presença.</p>
             <div class="imagem"><img src="imagens/retro1.jpg" alt="namorado"></div>
         </section>
         <section id="declaração">
             <h2>TÍTULO</h2>
-            <p>Parágrafo</p>
+              <p>Namorar um homem tão especial quanto você é a minha maior conquista. Eu gosto muito de cada pedacinho teu. Desculpa por ser chatnildo às vezes, eu amo muito ter você por perto e você é a pessoa mais good vibes e mais legal do mundo inteiro. Sou muito grato por ter você em minha vida. Obrigado por me ajudar a levantar a cabeça e seguir em frente, obrigado por todos os momentos em que eu estava triste e você me fez rir, obrigado por cada momento, obrigado por estar comigo, obrigado por tudo.</p>
             <div class="imagem"><img src="imagens/foto2.jpg" alt=""></div>
-            <p>Parágrafo</p>
+            <p>AAposto que nem a Savannah Afrikannah, nem a Amêndoa e muito menos a Nifumante iriam criar um site assim. Eu nunca imaginei que uma simples troca de palavras pudesse mudar tanto a minha vida. Você chegou muito rápido e foi ocupando um espaço enorme no meu coração, sendo apenas você mesmo. Com você, a vida fica mais leve e meus dias ficam mais coloridinhos. Sempre que eu tô triste ou desanimado, você manda nossos memes e edita fotos aleatórias colocando minha figurinha de criança escondida em algum lugar da foto. Eu também sempre mando foto de uma sopa aleatória com aquela figurinha tua, escrito “MANO EU TAVA COMENDO UMA SOPA E CAIU UA MOSCA NELA” que eu acho o auge do humor. E é por isso que, mesmo nos dias mais nublados, você consegue ser o meu solzinho.</p>
             <div class="imagem"><img src="imagens/retro2.jpg" alt=""></div>
         </section>
     </main>
