--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
         </section>
         <section id="declaração">
             <h2>TÍTULO</h2>
-              <p>Namorar um homem tão especial quanto você é a minha maior conquista. Eu gosto muito de cada pedacinho teu. Desculpa por ser chatnildo às vezes, eu amo muito ter você por perto e você é a pessoa mais good vibes e mais legal do mundo inteiro. Sou muito grato por ter você em minha vida. Obrigado por me ajudar a levantar a cabeça e seguir em frente, obrigado por todos os momentos em que eu estava triste e você me fez rir, obrigado por cada momento, obrigado por estar comigo, obrigado por tudo.</p>
-            <div class="imagem"><img src="imagens/foto2.jpg" alt=""></div>
-            <p>AAposto que nem a Savannah Afrikannah, nem a Amêndoa e muito menos a Nifumante iriam criar um site assim. Eu nunca imaginei que uma simples troca de palavras pudesse mudar tanto a minha vida. Você chegou muito rápido e foi ocupando um espaço enorme no meu coração, sendo apenas você mesmo. Com você, a vida fica mais leve e meus dias ficam mais coloridinhos. Sempre que eu tô triste ou desanimado, você manda nossos memes e edita fotos aleatórias colocando minha figurinha de criança escondida em algum lugar da foto. Eu também sempre mando foto de uma sopa aleatória com aquela figurinha tua, escrito “MANO EU TAVA COMENDO UMA SOPA E CAIU UA MOSCA NELA” que eu acho o auge do humor. E é por isso que, mesmo nos dias mais nublados, você consegue ser o meu solzinho.</p>
-            <div class="imagem"><img src="imagens/retro2.jpg" alt=""></div>
+            <p>Namorar um homem tão especial quanto você é a minha maior conquista. Eu gosto muito de cada pedacinho teu. Desculpa por ser chatnildo às vezes, eu amo muito ter você por perto e você é a pessoa mais good vibes e mais legal do mundo inteiro. Sou muito grato por ter você em minha vida. Obrigado por me ajudar a levantar a cabeça e seguir em frente, obrigado por todos os momentos em que eu estava triste e você me fez rir, obrigado por cada momento, obrigado por estar comigo, obrigado por tudo.</p>
+            <div class="imagem"><img src="imagens/foto2.jpg" alt="">fufuleco</div>
+            <p>Aposto que nem a Savannah Afrikannah, nem a Amêndoa e muito menos a Nifumante iriam criar um site assim. Eu nunca imaginei que uma simples troca de palavras pudesse mudar tanto a minha vida. Você chegou muito rápido e foi ocupando um espaço enorme no meu coração, sendo apenas você mesmo. Com você, a vida fica mais leve e meus dias ficam mais coloridinhos. Sempre que eu tô triste ou desanimado, você manda nossos memes e edita fotos aleatórias colocando minha figurinha de criança escondida em algum lugar da foto. E é por isso que, mesmo nos dias mais tristes, você consegue ser o meu motivo pra sorrir.</p>
+            <div class="imagem"><img src="imagens/retro2.jpg" alt="">gostoso</div>
+            <p>Eu também sempre mando foto de uma sopa aleatória com aquela figurinha tua, escrito “MANO EU TAVA COMENDO UMA SOPA E CAIU UA MOSCA NELA” que eu acho o auge do humor. Esse é o meu jeitinho de demonstrar amor, tá. 😭</p>
+            <div class="imagem"><img src="imagens/mosca_na_sopa.jpg" alt="mosca"></div>
         </section>
     </main>
 </body>
