--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="imagem"><img src="imagens/retro2.jpg" alt="gostoso"></div>
             <p>Eu também sempre mando foto de uma sopa aleatória com aquela figurinha tua, escrito “MANO EU TAVA COMENDO UMA SOPA E CAIU UA MOSCA NELA” que eu acho o auge do humor. Esse é o meu jeitinho de demonstrar amor, tá. 😭</p>
             <div class="imagem"><img src="imagens/mosca_na_sopa.jpg" alt="mosca"></div>
-            <p>Eu te amo muito, meu amor. Eu amo você elevado à vigésima quinta potência. Eu amo você do mesmo jeito que o Cléber adora cobrar aluguéis. Eu amo você assim como o Gumball ama a Penny. Quero muito tê-lo pra sempre e também quero muito construir uma vidinha com você. 🩵</p>
+            <p>Eu te amo muito, meu amor. Eu amo você elevado à vigésima quinta potência. Eu amo você do mesmo jeito que o Cléber ama cobrar aluguéis. Eu amo você assim como o Gumball ama a Penny. Eu amo você igual o Seu Batista ama pedir intervalo para a professora Catherine. Quero muito tê-lo pra sempre e também quero muito construir uma vidinha com você. 🩵</p>
         </section>
     </main>
 </body>
