--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <p>Aposto que nem a Savannah Afrikannah, nem a Amêndoa e muito menos a Nifumante iriam criar um site assim. Eu nunca imaginei que uma simples troca de palavras pudesse mudar tanto a minha vida. Você chegou muito rápido e foi ocupando um espaço enorme no meu coração, sendo apenas você mesmo. Com você, a vida fica mais leve e meus dias ficam mais coloridinhos. Sempre que eu tô triste ou desanimado, você manda nossos memes e edita fotos aleatórias colocando minha figurinha de criança escondida em algum lugar da foto. E é por isso que, mesmo nos dias mais tristes, você consegue ser o meu motivo pra sorrir.</p>
             <div class="imagem"><img src="imagens/retro2.jpg" alt="gostoso"></div>
             <p>Eu também sempre mando foto de uma sopa aleatória com aquela figurinha tua, escrito “MANO EU TAVA COMENDO UMA SOPA E CAIU UA MOSCA NELA” que eu acho o auge do humor. Esse é o meu jeitinho de demonstrar amor, tá. 😭</p>
-            <div class="imagem"><img src="imagens/mosca_na_sopa.jpg" alt="mosca"></div>
+            <div class="imagem"><img src="imagens/mosca_na_sopa.jpg" alt="mosca na sopa"></div>
             <p>Eu te amo muito, meu amor. Eu amo você elevado à vigésima quinta potência. Eu amo você do mesmo jeito que o Cléber ama cobrar aluguéis. Eu amo você assim como o Gumball ama a Penny. Eu amo você igual o Seu Batista ama pedir intervalo para a professora Catherine. Amo você infinitamente. Quero muito tê-lo pra sempre e também quero muito construir uma vidinha com você. 🩵</p>
-            <div class="imagem"><img src="imagens/girando.gif" alt="roda a rosa jequiti"></div>
+            <div class="imagem"><img src="imagens/girando.gif" alt="roda a roda jequiti"></div>
         </section>
     </main>
 </body>
