--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
                     <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
                     <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
-                    <div class="swiper-slide"><img src="imagens/foto1.jpgg"></div>
+                    <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
                     <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
                     <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
                     <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
@@ -50,10 +50,6 @@
         const swiper = new Swiper('.swiper', {
             spaceBetween: 10,
             slidesPerView: 3,
-            pagination: {
-                el: '.swiper-pagination',
-                type: 'bullets',
-            },
         });
     </script>
         <section id="declaração">
