--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <div class="swiper">
                 <div class="swiper-pagination"></div>
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
-                    <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
-                    <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
-                    <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
-                    <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
-                    <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
-                    <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
-                    <div class="swiper-slide"><img src="imagens/foto1.jpg"></div>
+                    <div class="swiper-slide"><img src="carrossel/1.jpg"></div>
+                    <div class="swiper-slide"><img src="carrossel/2.jpg"></div>
+                    <div class="swiper-slide"><img src="carrossel/3.jpg"></div>
+                    <div class="swiper-slide"><img src="carrossel/4.png"></div>
+                    <div class="swiper-slide"><img src="carrossel/5.jpg"></div>
+                    <div class="swiper-slide"><img src="carrossel/6.jpg"></div>
+                    <div class="swiper-slide"><img src="carrossel/7.jpg"></div>
+                    <div class="swiper-slide"><img src="carrossel/8.png"></div>
                 </div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
